Fixed weird background gap

--- a/website.css
+++ b/website.css
@@ -5,8 +5,9 @@ h1{
 }
 
 body{
-  background: url(https://forums.unrealengine.com/filedata/fetch?id=1113441&d=1470732920);
+  background: url(https://forums.unrealengine.com/filedata/fetch?id=1113441&d=1470732920) no-repeat center center fixed;
   background-size: cover;
+  /*background-repeat: no-repeat;*/
 
 }
 
@@ -20,7 +21,7 @@ body{
 }
 
 .container{
-  padding: 2px 16px;
+  padding: 4px 16px;
 }
 
 .card {
@@ -29,7 +30,7 @@ body{
     border-radius: 5px; /* 5px rounded corners */
 }
 
-/* Add rounded corners to the top left and the top right corner of the image */
+/* Add rounded corners the image */
 img {
-    border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 5px 5px;
 }
